# azure_devops_artifacts_helpers

./: .buildinfo  .gitattributes  .gitignore  .tox-install.py  LICENSE  MANIFEST.in  README.rst  changelog.html  development.html  embed_requirements.txt  genindex.html  index.html  installation.html  objects.inv  populate_wheels.py  pyproject.toml  renovate.json  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sitemap.xml  sonar-project.properties  supported_python_versions.json  tox.ini  usage.html
.doctrees/: changelog.doctree  development.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
.github/: CODEOWNERS  dependabot.yml  renovate.json  sonar-project.properties
.github/workflows/: automerge-pr.yml  codeql-analysis.yml  dependabot.yaml  licenses.yml  lint-test.yaml  package-publish.yaml  pipeline.yml  release-management.yaml  test-build.yaml
_sources/: changelog.rst.txt  development.rst.txt  index.rst.txt  installation.rst.txt  usage.rst.txt
_static/: documentation_options.js
docs/source/: changelog.rst  conf.py  development.rst  index.rst  installation.rst  usage.rst
src/azure_devops_artifacts_helpers/: __init__.py  __main__.py  _get_version.py  _version.py  cli.py  seed.py  tox_venv.py
src/azure_devops_artifacts_helpers/plugins/: __init__.py  tox.py
src/azure_devops_artifacts_helpers/wheels/: __init__.py
tests/functional/cli/: test_cli.py
tests/functional/tox/: test_tox_init.py
tests/functional/virtualenv/: test_virtualenv_init.py
tools/: generate-pipenv.py  populate-wheels.py  populate_wheels.py  tox-install.py
