[build-system]
requires = ["setuptools >= 40.9.0", 'setuptools_scm[toml]>=6.2']
build-backend = "setuptools.build_meta"


[project]
name = "azure_devops_artifacts_helpers"
authors = [{name = "David Pugh", email="djpugh@gmail.com"}]
maintainers = [{ name = "David Pugh", email="djpugh@gmail.com" }]
description = "Bootstrap using Private Azure Devops Artifacts Feeds as an index-url with virtualenv/tox"
readme = {file="README.rst", content-type = "text/x-rst"}
keywords = ['Azure Devops', 'Azure Artifacts']
license = { file = "LICENSE" }
requires-python = '>=3.7,<3.12'
classifiers = [
        "Environment :: Console",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Intended Audience :: Developers",
    	"License :: OSI Approved :: MIT License",
        "Operating System :: Microsoft :: Windows",
        "Operating System :: POSIX :: Linux",
        "Operating System :: MacOS :: MacOS X",
        "Natural Language :: English",
        "Development Status :: 6 - Mature"
]
dependencies = [
    "virtualenv>=20.14.1",
    "click>=7.1.2"
]
dynamic = ["version"]

[project.entry-points."virtualenv.seed"]
azdo-pip="azure_devops_artifacts_helpers.seed:AzureDevopsArtifactsPipInvoke"

[project.entry-points."tox"]
venv = "azure_devops_artifacts_helpers.plugins.tox"

[project.scripts]
    azure_devops_artifacts_helpers = "azure_devops_artifacts_helpers.cli:main"

[project.optional-dependencies]
tox = [
    "tox"
    ]
dev = [
    "setuptools_scm[toml]"
]
dev-lint = [
    "flake8>=5.0.4",
    "flake8-import-order>=0.18.2",
    "flake8-eradicate>=1.4.0",
    "flake8-docstrings>=0.2.7",
    "flake8-pyproject>=1.2.3",
    "flake8-bugbear>=22.0.0",
    "flake8-comprehensions>=3.12.0",
    "flake8-unused-arguments>=0.0.13",
    "flake8-noqa>=1.3.1",
    "pipenv",
    "mypy"
]
dev-test-v3 = [
    "pytest>=7.3.1",
    "pytest-cov>=4",
    "tox<4.0.0"
    ]
dev-test-v4 = [
    "pytest>=7.3.1",
    "pytest-cov>=4",
    "tox>=4.0.0"
    ]
dev-docs = [
    "sphinx",
    "sphinx_material",
    "sphinx_github_changelog"
]
dev-populate = [
    "click"
]
dev-build = [
    "build"
]
vendored = [
    "artifacts-keyring>=0.3.2"
]

[project.urls]
homepage = "https://djpugh.github.io/azure_devops_artifacts_helpers"
documentation = "https://djpugh.github.io/azure_devops_artifacts_helpers"
repository = "https://github.com/djpugh/azure_devops_artifacts_helpers"
changelog = "https://djpugh.github.io/azure_devops_artifacts_helpers/changelog.html"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = [
    "*.rst",
    "*.ini",
    "*.toml",
    "*.whl"
]

[tool.setuptools_scm]
write_to ="src/azure_devops_artifacts_helpers/_version.py"
write_to_template = '__version__ = "{version}"'
version_scheme = "no-guess-dev"

[tool.mypy]
python_version = "3.11"
show_error_codes = true
strict = true
overrides = [
  { module = [
    "virtualenv.*",
    "tox.*"
  ], ignore_missing_imports = true },
]

[tool.flake8]
max-complexity = 22
max-line-length = 120
unused-arguments-ignore-abstract-functions = true
noqa-require-code = true
dictionaries = ["en_US", "python", "technical", "django"]
ignore = [
  "E203", # whitespace before ':'
  "W503", #  line break before binary operator
  "E501",
  "E226",
  "E121",
  "E123",
  "E126",
  "E24",
  "E704"
]
count = true
exclude = [
    # No need to traverse our git directory
    ".git",
    "./.git",
    # There's no value in checking cache directories
    "__pycache__",
    # The conf file is mostly autogenerated, ignore it
    "docs/source/conf.py",
    "./docs/source/conf.py",
    # This contains built code
    "build/*",
    "./build/lib/*",
    "./build/*",
    # This contains the builds that we don't want to check
    "dist",
    # This contains the docs
    "docs/*",
    # Compiled files
    "*.pyc",
    # Docs files
    "*.rst",
    "*.md",
    "*.png",
    ".tox",
    "examples",
    "tests",
    ".venv/*",
    ".tox/*"
]
show_source = true
statistics = true
application-import-names="azure_devops_artifacts_helpers"
docstring-convention="google"
import-order-style="google"
