[metadata]
name = azure_devops_artifacts_helpers
author = David Pugh
author_email = djpugh@gmail.com
description = Bootstrap using Private Azure Devops Artifacts Feeds as an index-url with virtualenv/tox
long_descripion = file:README.rst
classifiers =
        Environment :: Console
        Topic :: Software Development :: Libraries :: Python Modules
        Programming Language :: Python :: 3
    	License :: OSI Approved :: MIT License
        Operating System :: Microsoft :: Windows
        Operating System :: POSIX

provides =
    azure_devops_artifacts_helpers
;can't use this as we are setting requirements in setup.py which breaks the wheel
;requires-dist = setuptools

[options]
setup_requires =
    setuptools
package_dir =
    =src
packages = find:
python_requires = >=3

[options.entry_points]
virtualenv.seed =
    azdo-pip=azure_devops_artifacts_helpers.seed:AzureDevopsArtifactsPipInvoke
tox =
    venv = azure_devops_artifacts_helpers.tox_venv
[options.extras_require]
tox =
    tox

[options.package_data]
* =  *.rst
     requirements.txt
     embed_requirements.txt
     *.ini
     *.cfg
     *.whl

[options.packages.find]
where=src

[versioneer]
VCS = git
style = pep440
versionfile_source = src/azure_devops_artifacts_helpers/_version.py
versionfile_build = azure_devops_artifacts_helpers/_version.py
tag_prefix =
parentdir_prefix = azure_devops_artifacts_helpers-


# Flake 8 config
[flake8]

# Ignore errrors
# E501: Ignore line length
# E226: Missing whitespace around arithmetic operator
# Other default ignores: E121, E123, E126, E24, E704
ignore = E501,E226,E121,E123,E126,E24,E704
count = True
exclude =
    # No need to traverse our git directory
    .git,
    .\.git,
    # There's no value in checking cache directories
    __pycache__,
    # The conf file is mostly autogenerated, ignore it
    docs/source/conf.py,
    ./docs/source/conf.py,
    # This contains built code
    build/*,
    .\build\lib\*,
    .\build\*,
    # This contains the builds that we don't want to check
    dist,
    # This contains the docs
    docs/*,
    core_python_build/docs/*,
    # Compiled files
    *.pyc,
    # Docs files
    *.rst,
    *.md,
    *.png,
    .tox,
    examples,
    tests,
    versioneer.py,
    .venv/*,
    .tox/*
show_source = True
statistics = True
application-import-names=azure_devops_artifacts_helpers
docstring-convention=google